--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
